# tex-rs

./: .gitattributes  Cargo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/tests/: initex.rs  plain.rs  trip.rs
cli/tests/auxiliary/: vfs.rs
cli/tests_data/dvi_result/: plain_helloworld.dvi
cli/tests_data/plain_dmp/: plain.fmt
src/: configure.rs  info.rs  io_support.rs  latex_support.rs  lib.rs  pascal.rs  section_0002.rs  section_0003.rs  section_0004.rs  section_0005.rs  section_0006_to_0010.rs  section_0007.rs  section_0008.rs  section_0011.rs  section_0011_to_0016.rs  section_0012.rs  section_0012_to_0016.rs  section_0013.rs  section_0013_to_0015.rs  section_0013_to_0016.rs  section_0015.rs  section_0016.rs  section_0017.rs  section_0018.rs  section_0019.rs  section_0020.rs  section_0020_to_0024.rs  section_0021.rs  section_0022.rs  section_0022_to_0024.rs  section_0024.rs  section_0025.rs  section_0026.rs  section_0026_to_0029.rs  section_0026_to_0031.rs  section_0026_to_0037.rs  section_0027.rs  section_0028.rs  section_0030.rs  section_0031.rs  (+1249 more)
src/tex_the_program/: section_0001.rs  section_0002.rs  section_0003.rs  section_0004.rs  section_0005.rs  section_0006.rs  section_0007.rs  section_0008.rs  section_0009_to_0010.rs  section_0011.rs  section_0012.rs  section_0014.rs  section_0016.rs  section_0017.rs  section_0018.rs  section_0019.rs  section_0020.rs  section_0023.rs  section_0025.rs  section_0027.rs  section_0028.rs  section_0029.rs  section_0031.rs  section_0033.rs  section_0034.rs  section_0036.rs  section_0037.rs  section_0038.rs  section_0039.rs  section_0040.rs  section_0041.rs  section_0042.rs  section_0043.rs  section_0044.rs  section_0045.rs  section_0046.rs  section_0047.rs  section_0048.rs  section_0049.rs  section_0050.rs  (+1303 more)
