[package]
name = "tex"
version = "0.1.0"
authors = ["CrLF0710"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
static_assertions = "1.1.0"
typenum = {git = "https://github.com/crlf0710/typenum"}
globals_struct = {git = "https://github.com/crlf0710/globals_struct"}
unicode-normalization = { version = "0.1.13", optional = true }
linkme = "0.2.2"

[features]
initex = []
unicode_support = ['unicode-normalization']
debugging = []
default = ['initex', 'unicode_support']
