[package]
name = "tex"
version = "0.1.0"
authors = ["CrLF0710"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
static_assertions = "1.1.0"
typenum = {git = "https://github.com/crlf0710/typenum"}
globals_struct = {git = "https://github.com/crlf0710/globals_struct"}
unicode-segmentation = {version = "1.6.0", optional = true}
unicode-normalization = { version = "0.1.13", optional = true }
linkme = "0.2.2"
once_cell = "1.4.1"
tracing = { version = "0.1.21", optional = true }
tracing-subscriber = { version = "0.2.14", optional = true }

[features]
initex = []
unicode_support = ['unicode-segmentation', 'unicode-normalization']
debugging = []
trace = ['tracing', 'tracing-subscriber']
default = ['initex', 'unicode_support']
