[package]
name = "tex"
version = "0.1.0"
authors = ["CrLF0710"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
static_assertions = "1.1.0"
typenum = {git = "https://github.com/crlf0710/typenum"}
globals_struct = {git = "https://github.com/crlf0710/globals_struct"}
pascal_io = {git = "https://github.com/crlf0710/pascal_io/"}
unicode-segmentation = {version = "1.6.0", optional = true}
unicode-normalization = { version = "0.1.13", optional = true }
linkme = "0.2.2"
once_cell = "1.4.1"
tracing = { version = "0.1.21", optional = true }
ref-cast = "1.0.3"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
inventory = "0.1.10"

[workspace]
members = ["cli"]

[features]
initex = []
unicode_support = ['unicode-segmentation', 'unicode-normalization']
latex_support = []
debugging = []
trace = ['tracing']
trace_verbose = ['trace']
statistics = []
default = ['initex', 'unicode_support', 'latex_support']
