[package]
name = "tex-cli"
version = "0.1.0"
edition = "2021"

[features]
unicode_support = ['tex/unicode_support']
debugging = ['tex/debugging']
trace = ['tex/trace', 'tracing', 'tracing-subscriber', 'tracing-tree']
statistics = ['tex/statistics']

[dependencies]
structopt = "0.3"
tex = {path = ".."}
tracing = { version = "0.1.26", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-tree = { version = "0.1.10", optional = true }

[dev-dependencies]
pretty_assertions = "0.7.2"
rayon = "1.5.1"
vfs_crate = {version = "0.5.1", package = "vfs"}

